work on pagination 2

--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -25,7 +25,7 @@
         {% if app.user %}
             <form class="form-inline ml-auto my-1 mr-2" action="{{ url('search') }}" method="POST"> 
                 <div class="input-group mr-sm-2">
-                    <input type="search" class="form-control" id="formSearch" name="formSearch" placeholder="Search...">
+                    <input type="search" class="form-control" id="formSearch" name="formSearch" placeholder="Name, Pseudonym...">
                     <div class="input-group-append">
                         <button class="btn btn-outline-secondary btn-search" type="submit" id="btnFormSearch"><i class="fas fa-search"></i></button>
                     </div>
