--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -68,20 +68,26 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination pagination-sm justify-content-center">
                             <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-angle-double-left"></i></a>
+                                <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-angle-double-left"></i></a>
                             </li>
-                            <li class="page-item active" aria-current="page">
-                                <span class="page-link">
-                                    1
-                                    <span class="sr-only">(current)</span>
-                                </span>
-                            </li>
-                            <li class="page-item"><a class="page-link" href="{{ path('search', { stringToSearch: stringToSearch, offset:11 }) }}">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item"><a class="page-link" href="#">...</a></li>
-                            <li class="page-item"><a class="page-link" href="#">100</a></li>
+                            {% if nbPage <= 5 %}
+                                {% for numPage in 1..nbPage %}
+                                    <li class="page-item"><a class="page-link" href="{{ path('search', { stringToSearch: stringToSearch, offset:11 }) }}">{{ numPage }}</a></li>
+                                {% endfor %}
+                            {% else %}
+                                <li class="page-item active" aria-current="page">
+                                    <span class="page-link">
+                                        1
+                                        <span class="sr-only">(current)</span>
+                                    </span>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="{{ path('search', { stringToSearch: stringToSearch, offset:11 }) }}">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item"><a class="page-link" href="#">...</a></li>
+                                <li class="page-item"><a class="page-link" href="#">100</a></li>
+                            {% endif %}
                             <li class="page-item">
-                            <a class="page-link" href="#"><i class="fas fa-angle-double-right"></i></a>
+                                <a class="page-link" href="#"><i class="fas fa-angle-double-right"></i></a>
                             </li>
                         </ul>
                     </nav>
