--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,7 +51,7 @@
                         "debug": false,
                         "newestOnTop": false,
                         "progressBar": true,
-                        "positionClass": "toast-top-left",
+                        "positionClass": "toast-bottom-left",
                         "preventDuplicates": false,
                         "onclick": null,
                         "showDuration": "300",
