--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row pt-4">
         <div class="col">
-            <span class="text-result float-left">{{ paginator|length }} résultats trouvés  {{ nbPage }} pages</span>
+            <span class="text-result float-left">{{ paginator|length }} résultats trouvés  {{ nb_page }} pages</span>
         </div>
         <div class="col">
             <span class="text-advanced-search float-right" id="btnAdvancedSearch">Recherche Avancée <i id="iconAdvancedSearch" class="fas fa-caret-down"></i></span>
@@ -64,15 +64,15 @@
                         {% if not loop.last %}<hr>{% endif %}
                     {% endfor %}
                 </div>
-                {% if nbPage > 1 %}
+                {% if nb_page > 1 %}
                     <nav aria-label="Page navigation example">
                         <ul class="pagination pagination-sm justify-content-center">
-                            <li class="page-item disabled">
-                                <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-angle-double-left"></i></a>
+                            <li class="page-item {% if page == 1 %}disabled{% endif %}">
+                                <a class="page-link" href="{{ path('search', { page:page - 1, stringToSearch:string_to_search }) }}" tabindex="-1" aria-disabled="true"><i class="fas fa-angle-double-left"></i></a>
                             </li>
-                            {% if nbPage <= 5 %}
-                                {% for numPage in 1..nbPage %}
-                                    <li class="page-item"><a class="page-link" href="{{ path('search', { stringToSearch: stringToSearch, offset:11 }) }}">{{ numPage }}</a></li>
+                            {% if nb_page <= 5 %}
+                                {% for numPage in 1..nb_page %}
+                                    <li class="page-item {% if numPage == page %}active{% endif %}"><a class="page-link" href="{{ path('search', { page:numPage, stringToSearch:string_to_search }) }}">{{ numPage }}</a></li>
                                 {% endfor %}
                             {% else %}
                                 <li class="page-item active" aria-current="page">
@@ -81,13 +81,13 @@
                                         <span class="sr-only">(current)</span>
                                     </span>
                                 </li>
-                                <li class="page-item"><a class="page-link" href="{{ path('search', { stringToSearch: stringToSearch, offset:11 }) }}">2</a></li>
+                                <li class="page-item"><a class="page-link" href="{{ path('search', { stringToSearch: string_to_search, offset:11 }) }}">2</a></li>
                                 <li class="page-item"><a class="page-link" href="#">3</a></li>
                                 <li class="page-item"><a class="page-link" href="#">...</a></li>
                                 <li class="page-item"><a class="page-link" href="#">100</a></li>
                             {% endif %}
-                            <li class="page-item">
-                                <a class="page-link" href="#"><i class="fas fa-angle-double-right"></i></a>
+                            <li class="page-item {% if page == nb_page %}disabled{% endif %}">
+                                <a class="page-link" href="{{ path('search', { page:page + 1, stringToSearch:string_to_search }) }}"><i class="fas fa-angle-double-right"></i></a>
                             </li>
                         </ul>
                     </nav>
