custom page-item

--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -43,7 +43,9 @@
                                             {% endif %}
                                     class="avatar avatar-media mr-3 my-auto" alt="{{ 'alt.avatar'|trans|raw }} {{ result.pseudo }}">
                                     <div class="media-body">
-                                        <p class="col-text-pseudo mt-0">{{result.pseudo }}</p>
+                                        <p class="col-text-pseudo mt-0">{{result.pseudo }}
+                                            {% if result.id == user_id %}<span class="badge badge-happyDarkBlue">Vous</span>{% endif %}
+                                        </p>
                                         {% if result.firstName is not empty %}
                                             <p class="col-text-profile">{{ result.firstName }}  {{ result.lastName }}</p>
                                         {% endif %}
@@ -57,9 +59,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-5 col-md-4 text-right my-auto">
-                                <button type="button" class="btn btn-outline-happyDarkBlue btn-sm">Se connecter</button>
-                            </div>
+                            {% if result.id != user_id %}
+                                <div class="col-5 col-md-4 text-right my-auto">
+                                    <button type="button" class="btn btn-outline-happyDarkBlue btn-sm">Se connecter</button>
+                                </div>
+                            {% endif %}
                         </div>
                         {% if not loop.last %}<hr>{% endif %}
                     {% endfor %}
