--- a/templates/partials/_profileInfo.html.twig
+++ b/templates/partials/_profileInfo.html.twig
@@ -80,13 +80,15 @@
       </div>
       <hr>
       <div class="row row-dashboard">
-        <div class="col-9">
-          <span class="col-text-profile"><i class="fas fa-pen-fancy"></i> Mes articles</span>
+          <div class="col-9">
+            <span class="col-text-profile"><i class="fas fa-pen-fancy"></i> Mes articles</span>
+          </div>
+          <div class="col-3">
+            <a href="#">
+            <span class="col-text-profile text-right badge badge-blue">01</span>
+            </a>
+          </div>
         </div>
-        <div class="col-3">
-          <span class="col-text-profile text-right badge badge-blue">01</span>
-        </div>
-      </div>
       <hr>
       <div class="row row-dashboard">
         <div class="col-9">
@@ -102,11 +104,13 @@
           <span class="col-text-profile"><i class="fas fa-eye"></i> Nouvelles visites</span>
         </div>
         <div class="col-3">
+          {% if user.visits|length > 0 %}<a href="{{ path('show_visit', {'slug':user.slug}) }}">{% endif %}
           <span class="col-text-profile text-right badge badge-blue">
             {% if user.visits|length > 99 %} +99
             {% else %} {{ '%02d'|format(user.visits|length) }}
             {% endif %}
           </span>
+          {% if user.visits|length > 0 %}</a>{% endif %}
         </div>
       </div>
       <hr>
