--- a/templates/partials/_profileInfo.html.twig
+++ b/templates/partials/_profileInfo.html.twig
@@ -104,7 +104,7 @@
           <span class="col-text-profile"><i class="fas fa-eye"></i> Nouvelles visites</span>
         </div>
         <div class="col-3">
-          {% if user.visitors|length > 0 %}<a href="{{ path('show_visit', {'slug':user.slug}) }}">{% endif %}
+          {% if user.visitors|length > 0 %}<a href="{{ path('show_visit') }}">{% endif %}
           <span class="col-text-profile text-right badge badge-blue">
             {% if user.visitors|length > 99 %} +99
             {% else %} {{ '%02d'|format(user.visitors|length) }}
