--- a/templates/partials/_listSearchProfile.html.twig
+++ b/templates/partials/_listSearchProfile.html.twig
@@ -46,16 +46,16 @@
                 <nav aria-label="Page navigation example">
                     <ul class="pagination pagination-sm justify-content-center">
                         <li class="page-item {% if page == 1 %}disabled{% endif %}">
-                            <a class="page-link" href="{{ path(route_name, { page:page - 1 }) }}" tabindex="-1" aria-disabled="true"><i class="fas fa-angle-double-left"></i></a>
+                            <a class="page-link" href="{{ path(route_name, { page:page - 1, stringToSearch:string_to_search }) }}" tabindex="-1" aria-disabled="true"><i class="fas fa-angle-double-left"></i></a>
                         </li>
-                        <li class="page-item {% if page == 1 %}active{% endif %}"><a class="page-link" href="{{ path(route_name, { page:1 }) }}">1</a></li>
+                        <li class="page-item {% if page == 1 %}active{% endif %}"><a class="page-link" href="{{ path(route_name, { page:1, stringToSearch:string_to_search }) }}">1</a></li>
                       
                         {% set NUM_MAX_PAGE = 7 %}
                         {% if nb_page > 2 %}
                             {% if nb_page <= NUM_MAX_PAGE %}
                                 {% for numPage in 2..nb_page - 1%}
                                     <li class="page-item {% if numPage == page %}active{% endif %}">
-                                        <a class="page-link" href="{{ path(route_name, { page:numPage }) }}">{{ numPage }}</a>
+                                        <a class="page-link" href="{{ path(route_name, { page:numPage, stringToSearch:string_to_search }) }}">{{ numPage }}</a>
                                     </li>
                                 {% endfor %}
                             {% else %}
@@ -63,37 +63,37 @@
                                     {% set lim_page = NUM_MAX_PAGE - 2 %}
                                     {% for numPage in 2..lim_page %}
                                         <li class="page-item {% if numPage == page %}active{% endif %}">
-                                            <a class="page-link" href="{{ path(route_name, { page:numPage }) }}">{{ numPage }}</a>
+                                            <a class="page-link" href="{{ path(route_name, { page:numPage, stringToSearch:string_to_search }) }}">{{ numPage }}</a>
                                         </li>
                                     {% endfor %}
                                     <li class="page-item">
-                                        <a class="page-link" href="{{ path(route_name, { page: lim_page +1 }) }}">...</a>
+                                        <a class="page-link" href="{{ path(route_name, { page: lim_page +1, stringToSearch:string_to_search }) }}">...</a>
                                     </li>
                                 {% elseif page >= nb_page - (NUM_MAX_PAGE - 3) %}
                                     <li class="page-item">
-                                        <a class="page-link" href="{{ path(route_name, { page: nb_page - (NUM_MAX_PAGE - 2) }) }}">...</a>
+                                        <a class="page-link" href="{{ path(route_name, { page: nb_page - (NUM_MAX_PAGE - 2), stringToSearch:string_to_search }) }}">...</a>
                                     </li>
                                     {% for numPage in nb_page - (NUM_MAX_PAGE - 3) .. nb_page - 1 %}
                                         <li class="page-item {% if numPage == page %}active{% endif %}">
-                                            <a class="page-link" href="{{ path(route_name, { page:numPage }) }}">{{ numPage }}</a>
+                                            <a class="page-link" href="{{ path(route_name, { page:numPage, stringToSearch:string_to_search }) }}">{{ numPage }}</a>
                                         </li>
                                     {% endfor %}
                                 {% else %}
                                     {% if nb_page > 2 %}
-                                        <li class="page-item"><a class="page-link" href="{{ path(route_name, { page: page - 2 }) }}">...</a></li>
-                                        <li class="page-item"><a class="page-link" href="{{ path(route_name, { page: page - 1 }) }}">{{ page - 1}}</a></li>
-                                        <li class="page-item active"><a class="page-link" href="{{ path(route_name, { page: page }) }}">{{ page }}</a></li>
-                                        <li class="page-item"><a class="page-link" href="{{ path(route_name, { page: page + 1 }) }}">{{ page + 1}}</a></li>
-                                        <li class="page-item"><a class="page-link" href="{{ path(route_name, { page: page + 2 }) }}">...</a></li>
+                                        <li class="page-item"><a class="page-link" href="{{ path(route_name, { page: page - 2, stringToSearch:string_to_search }) }}">...</a></li>
+                                        <li class="page-item"><a class="page-link" href="{{ path(route_name, { page: page - 1, stringToSearch:string_to_search }) }}">{{ page - 1}}</a></li>
+                                        <li class="page-item active"><a class="page-link" href="{{ path(route_name, { page: page, stringToSearch:string_to_search }) }}">{{ page }}</a></li>
+                                        <li class="page-item"><a class="page-link" href="{{ path(route_name, { page: page + 1, stringToSearch:string_to_search }) }}">{{ page + 1}}</a></li>
+                                        <li class="page-item"><a class="page-link" href="{{ path(route_name, { page: page + 2, stringToSearch:string_to_search }) }}">...</a></li>
                                     {% endif %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
                         <li class="page-item {% if page == nb_page %}active{% endif %}">
-                            <a class="page-link" href="{{ path(route_name, { page: nb_page }) }}">{{ nb_page }}</a>
+                            <a class="page-link" href="{{ path(route_name, { page: nb_page, stringToSearch:string_to_search }) }}">{{ nb_page }}</a>
                         </li>
                         <li class="page-item {% if page == nb_page %}disabled{% endif %}">
-                            <a class="page-link" href="{{ path(route_name, { page:page + 1 }) }}"><i class="fas fa-angle-double-right"></i></a>
+                            <a class="page-link" href="{{ path(route_name, { page:page + 1, stringToSearch:string_to_search }) }}"><i class="fas fa-angle-double-right"></i></a>
                         </li>
                     </ul>
                 </nav>
