work on show profile page

--- a/templates/main/visit.html.twig
+++ b/templates/main/visit.html.twig
@@ -11,10 +11,7 @@
 <div class="container">
     <div class="row pt-4">
         <div class="col">
-            <span class="text-result float-left">{{ 'search.result'|trans({count: paginator|length })|raw }}</span>
-        </div>
-        <div class="col">
-            <span class="text-advanced-search float-right" id="btnAdvancedSearch">{{ 'search.advanced'|trans|raw }} <i id="iconAdvancedSearch" class="fas fa-caret-down"></i></span>
+            <span class="text-result float-left">{{ 'visit.result'|trans({count: paginator|length })|raw }}</span>
         </div>
     </div>
     <hr>
